--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "HR system to manage employees",
   "main": "emplyee.js",
+  "type":"module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +22,7 @@
   "dependencies": {
     "express": "^5.0.0-beta.2",
     "inquirer": "^9.2.16",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
   }
 }
